# MentalHealth

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: pages.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: auth.py  config.py  db.py  main.py  models.py
backend/app/modules/: __init__.py  beliefs_act.py  beliefs_schema.py  goals.py  obstacles.py  orientation.py  registry.py  values.py
backend/app/routers/: modules.py
backend/app/schemas/: __init__.py  api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.local.ts  api.ts  types.ts
frontend/src/components/: Card.tsx  Chip.tsx  CrisisBanner.tsx  PhaseHeader.tsx  RatingDots.tsx  TrendChart.tsx
frontend/src/lib/: migrations.ts
frontend/src/modules/: registry.ts
frontend/src/modules/beliefs_act/: BeliefsActModule.tsx  BeliefsActSummary.tsx  index.ts  types.ts
frontend/src/modules/beliefs_schema/: BeliefsSchemaModule.tsx  BeliefsSchemaSummary.tsx  constants.ts  index.ts  types.ts
frontend/src/modules/checkin/: CheckinModule.tsx  CheckinSummary.tsx  constants.ts  index.ts  scoring.ts  types.ts
frontend/src/modules/goals/: GoalsModule.tsx  GoalsSummary.tsx  constants.ts  index.ts  types.ts
frontend/src/modules/obstacles/: ObstaclesModule.tsx  ObstaclesSummary.tsx  index.ts  types.ts
frontend/src/modules/orientation/: constants.ts  (+5 more)
frontend/src/styles/: index.css
reference/: .gitkeep
(+7 files in other folders)
